--- a/myapp/react-app/src/component/Festival/css/Nightmarket.css
+++ b/myapp/react-app/src/component/Festival/css/Nightmarket.css
@@ -4,63 +4,64 @@
   src: url("../font/Sriracha-Regular.ttf");
 }
 
-.nightmarket-wrap{
+.nightmarket-wrap {
   position: relative;
   display: inline-block;
-  width:100%;
+  width: 100%;
   top: 100px;
   min-height: 800px;
-  height:auto;
+  height: auto;
   text-align: center;
   /* background-color: black; */
 }
-.nightmarket-main{
+
+.nightmarket-main {
   position: relative;
   display: inline-block;
-  width:900px;
+  width: 900px;
   /* border:1px solid red; */
   min-height: 1800px;
-  height:auto;
-  background : rgba(14,14,14,0.99);
+  height: auto;
+  background: rgba(14, 14, 14, 0.99);
   text-align: left;
 }
 
-.nightmarket-top-img{
+.nightmarket-top-img {
   position: relative;
   display: inline-block;
   width: 500px;
   height: 650px;
   left: 25px;
-  top:25px;
+  top: 25px;
   /* border :1px solid blue; */
   background-image: url(../img/nightmarket1.jpeg);
   background-size: contain;
   background-repeat: no-repeat;
 }
 
-.nightmarket-top-text{
+.nightmarket-top-text {
   position: relative;
   display: inline-block;
   width: 350px;
   height: 150px;
-  left:45px;
-  top:-250px;
+  left: 45px;
+  top: -250px;
   color: rgb(202, 198, 198);
   /* border :1px solid blue; */
   font-family: "Sriracha-Regular";
 }
 
-.nightmarket-middle-wrap{
+.nightmarket-middle-wrap {
   position: relative;
   display: grid;
   width: 90%;
   height: 930px;
-  left:5px;
+  left: 5px;
   grid-template-rows: 100px 400px 30px 400px;
   grid-template-columns: 100%;
 }
 
-.nightmarket-middle-text{
+.nightmarket-middle-text {
   position: relative;
   top: 30px;
   text-align: center;
@@ -68,7 +69,7 @@
   font-family: "Sriracha-Regular";
 }
 
-.nightmarket-middle-grid1{
+.nightmarket-middle-grid1 {
   position: relative;
   display: grid;
   /* width: 70%; */
@@ -78,18 +79,18 @@
   grid-template-rows: 450px;
 }
 
-.nightmarket-middle-img1{
+.nightmarket-middle-img1 {
   background-image: url(../img/nightmarket6.jpeg);
   background-size: cover;
 }
 
-.nightmarket-middle-img2{
+.nightmarket-middle-img2 {
   background-image: url(../img/nightmarket3.jpeg);
   background-size: cover;
-  
+
 }
 
-.nightmarket-middle-grid2{
+.nightmarket-middle-grid2 {
   margin-top: 50px;
   position: relative;
   display: grid;
@@ -100,24 +101,68 @@
   grid-template-rows: 450px;
 }
 
-.nightmarket-middle-img3{
+.nightmarket-middle-img3 {
   background-image: url(../img/nightmarket5.jpeg);
   background-size: cover;
   padding: 20px;
 }
 
-.nightmarket-middle-img4{
+.nightmarket-middle-img4 {
   background-image: url(../img/nightmarket4.jpeg);
   background-size: cover;
   padding: 20px;
 }
-.nightmarket-map-box{
+
+.nightmarket-map-box {
   position: relative;
   display: inline-block;
-  width:900px;
-  height:600px;
+  width: 900px;
+  height: 600px;
 }
-.nightmarket-map{
-  width:900px;
-  height:500px;
+
+.nightmarket-map {
+  width: 900px;
+  height: 500px;
+}
+
+.nightmarket-image-container-wrap {
+  position: relative;
+  display: inline-block;
+  width: 950px;
+  top: -100px;
+  height: 500px;
+  left: 5px;
+}
+
+.nightmarket-image-container {}
+
+.nightmarket-image {
+  width: 287px;
+  height: 250px;
+  border-radius: 15px;
+  margin-left: 20px;
+  margin-top: 20px;
+  box-shadow: 6px 5px 3px rgba(0, 0, 0, 0.529);
+
+
+}
+
+.nightmarket-image-container::-webkit-scrollbar {
+  width: 8px;
+}
+
+.nightmarket-image-container::-webkit-scrollbar-track {
+  /* background-color: #f1f1f1; */
+}
+
+.nightmarket-image-container::-webkit-scrollbar-thumb {
+  background-color: #ffffffee;
+  border-radius: 5px;
+}
+
+/* 스크롤바 위 아래 버튼 스타일 */
+.nightmarket-image-container::-webkit-scrollbar-button {
+  width: 0;
+  height: 0;
+  display: none;
 }
