--- a/myapp/react-app/src/component/Qna/css/Qnalist.css
+++ b/myapp/react-app/src/component/Qna/css/Qnalist.css
@@ -1,14 +1,15 @@
+
 .qna-h1{
   position: relative;
   display: inline-block;
-  left:600px;
+  left:620px;
   top:100px;
 }
 .qna-list {
   left:400px;
   top:150px;
   width: 100%;
-  max-width: 800px;
+  max-width: 1000px;
   margin: 0 auto;
   margin-top: 150px;
   padding: 20px;
@@ -32,10 +33,27 @@
   display: flex;
   justify-content: space-between;
 }
+.qna-nick{
+  position: relative;
+  display: inline-block;
+  left:280px;
 
+}
 .qna-content {
   margin-top: 10px;
+  margin-left: 10px;
 }
+.qna-title{
+  position: absolute;
+  display: inline-block;
+  left:600px;
+  max-width: 300px; 
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+
 
 .open .qna-content {
   display: block;
@@ -53,21 +71,26 @@
 position: relative;
 display: inline-block;
 text-align: center;
-left:-100px;
+left:-70px;
 }
 
-.qna-title-header {
+.qna-title-header{
   position: relative;
   display: inline-block;
-  text-align: center;
-  left:-20px;
+  left:0px;
+
+}
+.qna-nick-header{
+  position: relative;
+  display: inline-block;
+  left:145px;
 }
 
 .qna-date-header {
   position: relative;
   display: inline-block;
   text-align: center;
-  left:90px;
+  left:60px;
 }
 .page-numbers {
   display: flex;
@@ -92,4 +115,25 @@ left:-100px;
 
 .page-numbers li:hover {
   background-color: #f8f9fa;
+  color:black;
+}
+.qedit-btn{
+background-image: url(../img/edit.png);
+background-size: cover;
+border: 0;
+  background-color: transparent;
+  width:20px;
+  height: 20px;
+}
+.qdelete-btn{
+  background-image: url(../img/delete.png);
+  background-size: cover;
+  border: 0;
+  background-color: transparent;
+  width:20px;
+  height: 20px;
+}.qna-actions{
+  position: relative;
+  display:inline-block;
+  left:850px;
 }
