--- a/myapp/react-app/src/component/Follow/css/Followersmodal.css
+++ b/myapp/react-app/src/component/Follow/css/Followersmodal.css
@@ -8,7 +8,7 @@
 }
 
 .FollowersModal-custom-modal .modal-content {
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.911);
   border-radius: 5px;
   top: 38px;
 
