회원관리페이지 접근제한

--- a/myapp/react-app/src/pages/css/Membermanagement.css
+++ b/myapp/react-app/src/pages/css/Membermanagement.css
@@ -37,7 +37,7 @@
 }
 
 .Membermanagement-box button {
-
+  position: relative;
   padding: 5px 10px;
   margin: 5px;
   border: none;
@@ -61,4 +61,8 @@
 .Membermanagement-box button:hover {
   background-color: #3498db;
   color: #fff;
+}
+.Membermanagement-pagination button{
+  position: relative;
+  left:550px;
 }
