--- a/myapp/react-app/src/component/Mypage/css/Mypostlist.css
+++ b/myapp/react-app/src/component/Mypage/css/Mypostlist.css
@@ -1,4 +1,5 @@
 .Mypostlist-box {
+
   border-radius: 20px;
 }
 
@@ -8,6 +9,18 @@
 }
 
 .Mypostlist-modal-box .modal-content {
+ 
   width: 400px;
   left: 35%;
+}
+.Mypostlist-list-table-wrap {
+  position: relative;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 20px;
+  margin: 0 auto;
+}
+.mypostbody{
+  position: relative;
+  left:-380px;
 }
