--- a/myapp/react-app/src/component/Gallery/css/Gallerylist.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerylist.css
@@ -14,6 +14,43 @@
   width: 85px;
   height: 40px;
   top: 165px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color:  #1124E1;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.Gallerylist-Button:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color: blue;
+
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.Gallerylist-Button:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.Gallerylist-Button:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .gall-list-table-wrap {
