--- a/myapp/react-app/src/component/Gallery/css/Gallerywriting.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerywriting.css
@@ -53,27 +53,85 @@
   cursor: pointer;
 }
 
-#Gallerywriting-btn-delete,
-#Gallerywriting-btn-regist,
+
+#Gallerywriting-btn-regist{
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  border: none;
+  background-color: #007bff;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+#Gallerywriting-btn-regist:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color:#0095f6;
+  z-index: -1;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+#Gallerywriting-btn-regist:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+#Gallerywriting-btn-regist:hover:before {
+ opacity: 1;
+  transform: scale(1);
+}
+
 #Gallerywriting-btn-cancel {
   width: 100%;
   height: 40px;
   margin-bottom: 10px;
-  background-color: #0095f6;
-  border: none;
   border-radius: 5px;
-  color: #fff;
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
+  background-color: #007bff;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
 }
 
-#Gallerywriting-btn-cancel {
-  background-color: #ccc;
+#Gallerywriting-btn-cancel:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color:#0095f6;
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
-#Gallerywriting-btn-delete:hover,
-#Gallerywriting-btn-regist:hover,
+#Gallerywriting-btn-cancel:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+#Gallerywriting-btn-cancel:hover:before {
+ opacity: 1;
+  transform: scale(1);
+}
+
 #Gallerywriting-btn-cancel:hover {
   opacity: 0.8;
 }
