--- a/myapp/react-app/src/component/Mypage/css/Intromodal.css
+++ b/myapp/react-app/src/component/Mypage/css/Intromodal.css
@@ -196,8 +196,42 @@
   font-family: Arial;
   font-size: 20px;
   font-weight: bold;
-  background-color: #33A3F5;
-  color: #ffffff;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color: #6699CC;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.modify:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color: #6699CC;
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.modify:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.modify:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .cancel {
@@ -210,8 +244,42 @@
   font-family: Arial;
   font-size: 20px;
   font-weight: bold;
-  background-color: #33A3F5;
-  color: #ffffff;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color: #6699CC;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.cancel:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color: #6699CC;
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.cancel:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.cancel:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 div.modal-body {
