--- a/myapp/react-app/src/component/Mypage/css/Mypagebox.css
+++ b/myapp/react-app/src/component/Mypage/css/Mypagebox.css
@@ -24,6 +24,9 @@
   top: 80px;
   cursor: pointer;
 }
+.Mypagebox-Followers-box h1:hover{
+  color:blue;
+}
 
 .Mypagebox-Following-box {
   position: relative;
@@ -31,6 +34,9 @@
   left: 430px;
   top: 80px;
   cursor: pointer;
+}
+.Mypagebox-Following-box h1:hover{
+  color:blue;
 }
 
 .Mypagebox-follow-box-wrap h1 {
@@ -94,20 +100,47 @@
 .mywrite-box-wrap button {
   position: relative;
   display: inline-block;
-  width: 70px;
-  height: 40px;
-  background-color: #33A3F5;
-  border: 0px solid;
-  border-radius: 25%;
+  width: 150px;
+  height: 50px;
   font-size: 20px;
-  color: white;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
   cursor: pointer;
+  background-color: #6699CC;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
   top: 110px;
-  left: 250px;
+  left: 340px;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.mywrite-box-wrap button:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background: linear-gradient(to right, #6699CC, #66CCFF);
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .mywrite-box-wrap button:hover {
-  color: black;
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.mywrite-box-wrap button:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .reservation-box-wrap {
@@ -133,22 +166,48 @@
   top: 135px;
   right: 140px;
 }
-
 .reservation-box-wrap button {
   position: relative;
   display: inline-block;
-  width: 70px;
-  height: 40px;
-  background-color: #33A3F5;
-  border: 0px solid;
-  border-radius: 25%;
+  width: 150px;
+  height: 50px;
   font-size: 20px;
-  color: white;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
   cursor: pointer;
+  background-color: #6699CC;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
   top: 110px;
-  left: 390px;
+  left: 330px;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.reservation-box-wrap button:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background: linear-gradient(to right, #6699CC, #66CCFF);
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .reservation-box-wrap button:hover {
-  color: black;
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.reservation-box-wrap button:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
