--- a/myapp/react-app/src/component/Qna/css/Qnacomment.css
+++ b/myapp/react-app/src/component/Qna/css/Qnacomment.css
@@ -54,22 +54,90 @@
 
 .QnaComment-modal-add-button {
   padding: 10px 20px;
-  background-color: #4CAF50;
   color: #fff;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
   margin-right: 10px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color: #4CAF50;
+  border: none;
+
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
 }
+
+.QnaComment-modal-add-button:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color:#45a049;
+  z-index: -1;
+
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.QnaComment-modal-add-button:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.QnaComment-modal-add-button:hover:before {
+  opacity: 1;
+  transform: scale(1);
+}
+
 
 .QnaComment-modal-close-button {
   padding: 10px 20px;
-  background-color: #4CAF50;
   color: #fff;
-  border: none;
   border-radius: 4px;
   cursor: pointer;
   margin-right: 10px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color: #4CAF50;
+  border: none;
+
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.QnaComment-modal-close-button:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color:#45a049;
+  z-index: -1;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
+.QnaComment-modal-close-button:hover {
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.QnaComment-modal-close-button:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .QnaComment-modal-edit {
