--- a/myapp/react-app/src/component/Qna/css/Qnalist.css
+++ b/myapp/react-app/src/component/Qna/css/Qnalist.css
@@ -135,25 +135,51 @@ border: 0;
 }.qna-actions{
   position: relative;
   display:inline-block;
-  left:850px;
+  left:840px;
 }
 .qreply-btn {
   position: relative;
   display:inline-block;
   bottom:3px;
   left:840px;
-  background-color: #007bff;
-  color: white;
   padding: 5px 10px;
   border-radius: 5px;
   font-size: 14px;
   cursor: pointer;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color: #3897F0;
   border: none;
-  margin-left: 10px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
+}
+
+.qreply-btn:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color:#0d8ecf;
+  z-index: -1;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
 }
 
 .qreply-btn:hover {
-  background-color: #0056b3;
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.qreply-btn:hover:before {
+  opacity: 1;
+  transform: scale(1);
 }
 
 .qna-header {
