--- a/myapp/react-app/src/component/Qna/css/Qnawrite.css
+++ b/myapp/react-app/src/component/Qna/css/Qnawrite.css
@@ -1,7 +1,4 @@
 .write-btn {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -14,12 +11,43 @@
   width: 100px;
   height: 40px;
   top:150px;
-
-  border-radius: 25px;
+  font-weight: bold;
+  color: #fff;
+  text-shadow: 0px 2px 2px rgba(0,0,0,0.8);
+  cursor: pointer;
+  background-color: #4CAF50;
+  border: none;
+  border-radius: 50px;
+  box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
+  outline: none;
+  overflow: hidden;
+  transition: all 0.2s ease-in-out;
 }
+
+.write-btn:before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  left: -10px;
+  bottom: -10px;
+  right: -10px;
+  background-color:#45a049;
+  z-index: -1;
+  border-radius: 50px;
+  transform: scale(0.98);
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+}
+
 .write-btn:hover {
-  background-color: #45a049;
-  }
+  box-shadow: 0px 5px 20px -5px rgba(0,0,0,0.8);
+  transform: translateY(-2px);
+}
+
+.write-btn:hover:before {
+  opacity: 1;
+  transform: scale(1);
+}
 
 .qmodal {
   display: flex;
