qna 디테일 + sweetalert 전체적용 + 맵 마커

--- a/myapp/react-app/src/component/Festival/css/Dron.css
+++ b/myapp/react-app/src/component/Festival/css/Dron.css
@@ -310,8 +310,14 @@
   display: inline-block;
   width: 950px;
   top: -336px;
-  height: 500px;
+  height: 560px;
   left: 5px;
+}
+.dron-image-grid{
+  min-height: 560px;
+}
+.dron-image-container {
+  min-height: 560px;
 }
 
 .dron-image-container {}
