--- a/myapp/react-app/src/component/Gallery/css/Gallerywriting.css
+++ b/myapp/react-app/src/component/Gallery/css/Gallerywriting.css
@@ -102,7 +102,7 @@
   cursor: pointer;
   background-color: #007bff;
   box-shadow: 0px 5px 15px -5px rgba(0,0,0,0.5);
-  outline: none;
+  border :0px solid;
   overflow: hidden;
   transition: all 0.2s ease-in-out;
 }
@@ -116,7 +116,6 @@
   right: -10px;
   background-color:#0095f6;
   z-index: -1;
-  border-radius: 50px;
   transform: scale(0.98);
   opacity: 0;
   transition: all 0.3s ease-in-out;
@@ -132,9 +131,6 @@
   transform: scale(1);
 }
 
-#Gallerywriting-btn-cancel:hover {
-  opacity: 0.8;
-}
 
 .Gallerywriting-btn-delete-box{
   display: inline-block;
@@ -187,7 +183,7 @@
   margin: 15px 15px;
   height: 35px;
   width: 90px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2)
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0)
 }
 
 
